kubernetes/frontend/frontend-service.yml
apiVersion: v1 
kind: Service 
metadata: 
  name: frontend 
  labels: 
    app: frontend 
spec: 
  type: ClusterIP 
  ports: 
    - port: 80 
      protocol: TCP 
      targetPort: 80 
  selector: 
    app: frontend

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  # В кластере может быть несколько Ingress Controllers, мы используем NGINX
  ingressClassName: "nginx"
  tls:
    - secretName: 
      hosts:
        - "02-aleksandr-volokhov.k8s.praktikum-services.tech"
  rules:
    # Хост определяет правило направления траффика по доменному имени
  - host: "02-aleksandr-volokhov.k8s.praktikum-services.tech"
    http:
      # Для различных путей в URL можно указать различные бэкенд-сервисы
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # Заранее создан сервис типа ClusterIP
            # Он выступает в качестве бэкенда нашего Ingress
            name: frontend
            port:
              # У сервиса может быть несколько портов, указываем нужный нам
              number: 80
